syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_process.proto";
import "process_step_type.proto";
import "attribute_expression.proto";

service ProductionProcessStep{
    rpc Get(GetProductionProcessStepRequest)returns(GetProductionProcessStepDetailResponse){}
    rpc Query(QueryProductionProcessStepRequest)returns(QueryProductionProcessStepResponse){}
}

message GetProductionProcessStepRequest{
    string productionProcessID=1;
    string productModelID=2;
    string code=3;
}

message ProductionProcessStepInfo {
	//ID 
	string id=1;
    //排序
    int32 sortIndex=2;
    //代号
    string code=3;
    //描述
    string description=4;
    //图示
    string graphic=5;
    //采集组
    string groupCode=6;
    //是否启用
    bool enable=7;
    //默认匹配
    bool initialValue=8;
    //工序管控
    bool processControl=9;
    //备注
    string remark=10;
    //生产产线ID
    string productionLineID=11;
    //工步类型ID
    string processStepTypeID=12;
    ProcessStepTypeInfo processStepType=13;
    //特性表达式
    repeated AttributeExpressionInfo attributeExpressions=14;
    //可使用的工序
    repeated string availableProcessIDs=16;
    repeated AvailableProcessInfo availableProcesses=15;
}

message AvailableProcessInfo{
    string id=1;
    string productionProcessStepID=2;
    string productionProcessID=3;
    ProductionProcessInfo productionProcess=4;
}

message QueryProductionProcessStepRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产产线ID 
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=5;
    // @inject_tag: uri:"ids" form:"ids"
    repeated string ids=6;
}

message QueryProductionProcessStepResponse{
    Code code=1;
    string message=2;
    repeated ProductionProcessStepInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductionProcessStepResponse{
    Code code=1;
    string message=2;
    repeated ProductionProcessStepInfo data=3;
}

message GetProductionProcessStepDetailResponse{
    Code code=1;
    string message=2;
    ProductionProcessStepInfo data=3;
}